Fix jumping to header anchors with sticky top navigation
https://www.bryanbraun.com/anchorjs/#pages-with-a-sticky-navbar

--- a/railseventstore.org/source/stylesheets/styles.css
+++ b/railseventstore.org/source/stylesheets/styles.css
@@ -72,6 +72,10 @@ ul {
   @apply font-bold text-left;
 }
 
+.documentation :target {
+  scroll-margin-top: calc(80px + 76px);
+}
+
 li ul {
   margin-bottom: 0;
 }
